--- a/index.html
+++ b/index.html
@@ -966,18 +966,63 @@ const shadow = shadowTarget.attachShadow({ mode: "open" });
             </ul>
           </section>
 
-          <!-- <section>
-            <h4>CSS Convention:</h4>
-            <ul>
+          <section>
+            <h4>CSS-in-JS: Styled Components</h4>
+            <ul style="font-size: 0.7em">
               <li>
-                Inline conventions make use of the style attribute on HTML
-                elements:
-                <pre
-                  style="display: inline"
-                ><code class="html" style="display:inline;">&lt;div style="color:blue;"&gt;</code></pre>
+                <a href="https://styled-components.com/">styled-components</a>
+                was the first popular CSS-in-JS tool to offer full support for
+                Media Queries, Pseudo's, and a syntax that supported nesting.
+              </li>
+              <li>
+                Initially it didn't support
+                <abbr title="Server-Side Rendering">SSR</abbr> but now can be
+                rendered on the server.
               </li>
             </ul>
-          </section> -->
+            <div style="display: flex; align-items: center; gap: 1em">
+              <img src="styledcomponents.png" alt="styled components" />
+              <pre><code class="css">const Button = styled.a`
+  display: inline-block;
+  border-radius: 3px;
+  padding: 0.5rem 0;
+  background: transparent;
+  color: white;
+  border: 2px solid white;
+
+  ${props => props.primary && css`
+    background: white;
+    color: black;
+  `}
+`</code></pre>
+            </div>
+          </section>
+          <section>
+            <h4>styled-components as an Input:</h4>
+            <ul class="iconlist">
+              <li class="man good">Easy to maintain; easy to refactor!</li>
+              <li class="dx good">
+                The DX is really good though files can get really long if poorly
+                organized.
+              </li>
+              <li class="dx">
+                The <code>css</code> export sucks in comparison the API-alike
+                alternatives.
+              </li>
+            </ul>
+            <h4>styled-components as an Output:</h4>
+            <ul class="iconlist">
+              <li class="sac good">CSS Modules-esque specificity handling!</li>
+              <li class="flex good">Easy to use across an application.</li>
+              <li class="flex">
+                Plays fairly well with others! Can run into collisions.
+              </li>
+              <li class="size bad">
+                Ships a runtime in your browser to parse it's proprietary
+                syntax.
+              </li>
+            </ul>
+          </section>
         </section>
       </div>
     </div>
