--- a/index.html
+++ b/index.html
@@ -1133,16 +1133,20 @@ render(
                 organized.
               </li>
             </ul>
-            <h4>Emotion as an Output:</h4>
+            <h4>Linaria as an Output:</h4>
             <ul class="iconlist">
               <li class="sac good">CSS Modules-esque specificity handling!</li>
               <li class="flex good">Easy to use across an application.</li>
               <li class="flex">
                 Plays fairly well with others! Can run into collisions.
               </li>
-              <li class="size bad">
-                Not zero-runtime. Ships a runtime in your browser to parse it's
-                proprietary syntax.
+              <li class="size good">Zero-runtime!!!!!</li>
+              <li class="size good">
+                Has an
+                <a href="https://www.npmjs.com/package/@linaria/atomic"
+                  >@atomic</a
+                >
+                package for even smaller CSS files!!!
               </li>
             </ul>
           </section>
