--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@ render(
                 <a href="https://linaria.dev/">Linaria</a> is a another
                 CSS-in-JS with a very similar API to styled-components and
                 Emotion. It offers both <code>styled</code> components and the
-                ability to generate scoped classnames with <code>css</code>.
+                ability to generate scoped class names with <code>css</code>.
               </li>
               <li>
                 Linaria generates CSS files and leverages CSS Custom Properties
@@ -1135,7 +1135,9 @@ render(
             </ul>
             <h4>Linaria as an Output:</h4>
             <ul class="iconlist">
-              <li class="sac good">CSS Modules-esque specificity handling!</li>
+              <li class="sac good">
+                CSS Modules-esque (or Atomic-esque) specificity handling!
+              </li>
               <li class="flex good">Easy to use across an application.</li>
               <li class="flex">
                 Plays fairly well with others! Can run into collisions.
