--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@ const styles = stylex.create({
               <li class="dx good">Typed Styles!</li>
               <li class="dx">Inline style can limit IDE linting features</li>
             </ul>
-            <h4>vanilla-extract as an Output:</h4>
+            <h4>StyleX as an Output:</h4>
             <ul class="iconlist">
               <li class="sac good">Atomic-esque specificity handling!</li>
               <li class="flex good">Easy to use across an application.</li>
