--- a/index.html
+++ b/index.html
@@ -592,8 +592,8 @@ div > .class > p {
                 ).
               </li>
               <li>
-                The classes have no semantic value and no opinions on the
-                markup.
+                The classes often describe what the component is but they do not
+                have any opinions on the underlying markup.
               </li>
               <li>
                 <a href="http://www.csszengarden.com/">CSS Zen Garden</a> is a
